# aiogram-bot-template

./: .env_example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  bot.py  docker-compose.yml  example.env  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  linting.yml
aiogram_bot_template/: bot.py
aiogram_bot_template/data/: config.py
aiogram_bot_template/db/db_api/storages/: __init__.py  base.py  postgres.py
aiogram_bot_template/db/db_api/storages/basestorage/: storage.py
aiogram_bot_template/db/db_api/storages/postgres/: storage.py
aiogram_bot_template/exceptions/: __init__.py  base.py  keyboard_utils.py
aiogram_bot_template/filters/: __init__.py  chat_type.py  text.py
aiogram_bot_template/handlers/user/: __init__.py  start.py
aiogram_bot_template/keyboards/: __init__.py
aiogram_bot_template/keyboards/default/: __init__.py  basic.py  consts.py
aiogram_bot_template/keyboards/inline/: __init__.py  consts.py
aiogram_bot_template/keyboards/keyboard_utils/: schema_generator.py
aiogram_bot_template/middlewares/: logging.py
aiogram_bot_template/models/: __init__.py  base.py
aiogram_bot_template/states/: user.py
aiogram_bot_template/utils/: __init__.py  chunks.py  connect_to_services.py  logging.py  smart_session.py
aiogram_bot_template/web_handlers/: __init__.py  tg_updates.py
data/: config.py  config.py.example.py
db/db_api/storages/: __init__.py
db/db_api/storages/basestorage/: __init__.py  storage.py
db/db_api/storages/postgres/: __init__.py  storage.py
filters/: __init__.py  is_admin.py
handlers/: __init__.py
handlers/errors/: __init__.py  not_modified.py
handlers/user/: __init__.py  help.py  start.py
infra/scripts/: init_project.py
infra/systemd/: aiogram_bot_template.service
keyboards/: __init__.py
keyboards/default/: __init__.py  basic.py  consts.py  main_menu.py
keyboards/default/utils/: misc.py
keyboards/inline/: callbacks.py  consts.py
keyboards/inline/utils/: __init__.py  misc.py
keyboards/keyboard_utils/: schema_generator.py
middlewares/: __init__.py  db.py  di_logging.py  logging.py  logging_middleware.py  throttling.py
models/: base.py
states/: __init__.py
states/user/: __init__.py  user.py
systemd/: aiogram_bot_template.service
utils/: __init__.py  chunks.py  logging.py
utils/db/cache/redis/: base.py
utils/db/db_api/storages/: __init__.py
utils/db/db_api/storages/basestorage/: storage.py
utils/db/db_api/storages/mysql/: __init__.py  storage.py
utils/db/db_api/storages/postgres/: __init__.py  storage.py
utils/db/db_api/storages/sqlite/: storage.py
utils/db/mongo/: __init__.py  storage.py
utils/db_api/: consts.py
utils/db_api/storages/: __init__.py
utils/db_api/storages/basestorage/: __init__.py
utils/db_api/storages/sqlite/: __init__.py  storage.py
utils/misc/: __init__.py  logging.py  logging_extras.py  throttling.py
utils/redis/: consts.py
web_handlers/: __init__.py  health.py  tg_updates.py
