[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
force_alphabetical_sort_within_sections = true
group_by_package = true

[tool.mypy]
python_version = "3.10"
files = "bot.py"
plugins = "pydantic.mypy"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true


[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true


[tool.ruff]
target-version = "py310"
preview = true

[tool.ruff.lint]
select = [
    "E", "F", "B", "UP", "SIM", "N", "YTT", "ANN", "ASYNC", "S", "A", "COM", "C4",
    "DTZ", "T10", "EM", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SLOT", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA",
    "PLC", "PLE", "PLW", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"
]
ignore = ["E501", "ANN101", "ANN401", "RET504", "PLC0414", "SIM108"]
unfixable = ["B"]

[tool.ruff.format]
line-ending = "lf"


[tool.poetry]
name = "aiogram-bot-template"
version = "2.3.0"
description = "Template for creating scalable bots with aiogram"
authors = ["Forden <24463229+Forden@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "aiogram_bot_template" }]

[tool.poetry.scripts]
aiogram_bot_template = "aiogram_bot_template.bot:main"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3"
environs = "11.0.0"
redis = "~5.1"
asyncpg = "0.29.0"
pydantic = "~2.9"
structlog = "^24"
aiojobs = "^1"
orjson = "~3.10"
tenacity = "^9"
pytz = "^2024"
aiohttp = "~3.10"
arrow = "^1.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = { extras = ["d"], version = "^24.3.0" }
ruff = "^0.4"
types-redis = "^4.5.5.2"
isort = "^5.13.2"
types-pytz = "^2023.3.0.1"
types-cachetools = "^5.3.0.7"
deptry = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
