[project]
name = "aiogram-bot-template"
description = "Template for creating scalable bots with aiogram"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Forden", email = "24463229+Forden@users.noreply.github.com" }
]
maintainers = [
    { name = "Forden", email = "24463229+Forden@users.noreply.github.com" }
]
readme = "README.md"
packages = [{ include = "aiogram_bot_template" }]
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/Forden/aiogram-bot-template"
repository = "https://github.com/Forden/aiogram-bot-template"

[project.scripts]
aiogram_bot_template = "aiogram_bot_template.bot:main"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false
version = "1.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3"
environs = "~14"
redis = "~5.2"
asyncpg = "0.30.0"
pydantic = "~2"
structlog = "25.1.0"
aiojobs = "^1"
orjson = "~3.10"
tenacity = "^9"
pytz = "^2025"
aiohttp = "~3"
arrow = "^1.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = { extras = ["d"], version = "^25" }
ruff = "^0.9.7"
types-redis = "^4.5.5.2"
isort = "~6"
types-pytz = "^2025"
types-cachetools = "^5.3.0.7"
deptry = "0.23.0"
pip-audit = "^2.8.0"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
force_alphabetical_sort_within_sections = true
group_by_package = true

[tool.mypy]
python_version = "3.10"
files = "bot.py"
plugins = "pydantic.mypy"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true


[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true


[tool.ruff]
target-version = "py310"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "ANN401", "RET504", "PLC0414", "SIM108", "D", "I", "CPY001"]
unfixable = ["B"]

[tool.ruff.format]
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
